--- a/css/styles.css
+++ b/css/styles.css
@@ -377,6 +377,12 @@ a.navbar-logo-blue:hover {
 	color: #9fb1b5 !important;
 }
 
+.red-texture {
+	background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.05)), url(../web-img/BG-00.jpg);
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+}
+
 .section-description-planet {
 	margin: 1rem auto 0 auto;
 	width: 69%;
