--- a/css/styles.css
+++ b/css/styles.css
@@ -360,6 +360,29 @@ a.navbar-logo-blue:hover {
 		background-position: 25%;
 	}
 }
+.header-template {
+	background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.05)), url(../web-img/header-bg-pro.jpg);
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+	box-shadow: inset 0 -10px 70px rgba(0, 0, 0, 0.75);
+	height: 70vh;
+	background-position: 75%;
+}
+@media (min-width: 1200px) {
+	.header-template {
+		background-attachment: fixed;
+	}
+}
+@media (max-width: 768px) {
+	.header-template {
+		background-position: 25%;
+	}
+}
+@media only screen and (min-device-width: 1024px) and (max-device-width: 1024px) and (min-device-height: 1366px) and (max-device-height: 1366px) and (min-width: 1024px) and (max-width: 1024px) {
+	.header-solar-system {
+		background-position: 25%;
+	}
+}
 /* End code for formatting the headers */
 
 .black-texture {
